Mod: generate ast for each java file in main application